--- a/seção-18-webpack/public/estilo.css
+++ b/seção-18-webpack/public/estilo.css
@@ -1,7 +1,17 @@
-/*!*****************************************************************************!*\
-  !*** css ./node_modules/css-loader/dist/cjs.js!./src/assets/css/estilo.css ***!
-  \*****************************************************************************/
+/*!********************************************************************************************************************!*\
+  !*** css ./node_modules/css-loader/dist/cjs.js!./node_modules/sass-loader/dist/cjs.js!./src/assets/css/estilo.css ***!
+  \********************************************************************************************************************/
 body {
   background-color: #444;
+  background-image: url(670c3121575a773e31fc.png);
+  background-repeat: no-repeat;
+  background-position: center;
 }
-
+/*!*********************************************************************************************************************!*\
+  !*** css ./node_modules/css-loader/dist/cjs.js!./node_modules/sass-loader/dist/cjs.js!./src/assets/scss/index.scss ***!
+  \*********************************************************************************************************************/
+.botao {
+  background-color: #19b3e6;
+  color: #fff;
+  font-size: 1.8rem;
+}
