--- a/seção-18-webpack/src/assets/css/estilo.css
+++ b/seção-18-webpack/src/assets/css/estilo.css
@@ -1,3 +1,6 @@
 body {
   background-color: #444;
+  background-image: url(../imgs/duolingo.png);
+  background-repeat: no-repeat;
+  background-position: center;
 }
