--- a/seção-24-cadastro-de-usuario/crud/frontend/src/components/template/Header.css
+++ b/seção-24-cadastro-de-usuario/crud/frontend/src/components/template/Header.css
@@ -1,6 +1,6 @@
 header.header {
   background-color: #fff;
-  padding: 0px 15px;
+  padding: 15px;
   overflow: hidden;
   white-space: nowrap;
   text-overflow: ellipsis;
