--- a/seção-25-nextjs/next-crud/src/app/globals.css
+++ b/seção-25-nextjs/next-crud/src/app/globals.css
@@ -1,4 +1,5 @@
 @import "tailwindcss";
+@source inline("bg-* {from,to}-{green,gray,blue}-{500,700}");
 
 /* 
 :root {
@@ -24,5 +25,5 @@
 body {
   /* background: var(--background); */
   /* color: var(--foreground); */
-  font-family: Arial, Helvetica, sans-serif;
+  /* font-family: Arial, Helvetica, sans-serif; */
 }
